--- a/dev/elastic-dev/docker-compose.yml
+++ b/dev/elastic-dev/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.2'
 services:
   es01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:$ELASTIC_VERSION
     container_name: es01
     environment:
       - node.name=es01
@@ -18,11 +18,12 @@ services:
       - data01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+      - 9300:9300
     networks:
       - elastic
 
   es02:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:$ELASTIC_VERSION
     container_name: es02
     environment:
       - node.name=es02
@@ -43,7 +44,7 @@ services:
       - elastic
 
   es03:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:$ELASTIC_VERSION
     container_name: es03
     environment:
       - node.name=es03
@@ -64,7 +65,7 @@ services:
       - elastic
 
   kib01:
-    image: docker.elastic.co/kibana/kibana:7.9.2
+    image: docker.elastic.co/kibana/kibana:$ELASTIC_VERSION
     container_name: kib01
     ports:
       - 5601:5601
