--- a/dev/ga_dev/docker-compose.yml
+++ b/dev/ga_dev/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       #- ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - Serilog__WriteTo__0__Name=Seq
       - Serilog__WriteTo__0__Args__serverUrl=http://172.16.95.52:5342
-      - Serilog__WriteTo__0__Args__apiKey=5gn4wqAEyNHZ2QhY18nU
+      - Serilog__WriteTo__0__Args__apiKey=$SERILOG_APIKEY
     ports:
       #- "44392:443"
       - "54023:80"
@@ -42,7 +42,7 @@ services:
       - FolderConfig__Apps__1__uploadFSBaseFolder=/mnt/wf/destino
       - Serilog__WriteTo__0__Name=Seq
       - Serilog__WriteTo__0__Args__serverUrl=http://172.16.95.52:5342
-      - Serilog__WriteTo__0__Args__apiKey=5gn4wqAEyNHZ2QhY18nU
+      - Serilog__WriteTo__0__Args__apiKey=$SERILOG_APIKEY
     ports:
       #- "44382:443"
       - "54013:80"
