--- a/dev/kong-dev/postgres/Dockerfile
+++ b/dev/kong-dev/postgres/Dockerfile
@@ -2,6 +2,6 @@
 FROM postgres:9.6
 
 COPY docker-entrypoint.sh /usr/local/bin/
-
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 ENTRYPOINT ["docker-entrypoint.sh"]
 CMD ["postgres"]
