--- a/dev/nginx/conf.d/web.conf
+++ b/dev/nginx/conf.d/web.conf
@@ -25,6 +25,8 @@ server {
     listen 443 ssl;
     server_name <server.domain.com>;
 
+    # underscores_in_headers  on;
+
     ssl_certificate /etc/ssl/server.domain.com.crt;
     ssl_certificate_key /etc/ssl/server.domain.com-pub.key;
 
@@ -40,6 +42,7 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_redirect          off;
         proxy_pass http://web_upstream;
+        # proxy_pass_request_headers      on;
     }
 
     # location / {    
