--- a/dev/redis-dev/docker-compose.yml
+++ b/dev/redis-dev/docker-compose.yml
@@ -8,8 +8,9 @@ services:
      - ~/.docker/redisinsight:/db
   redis:
     image: "redis:alpine"
-    command: redis-server --requirepass ${REDIS_DEFAULT_PASS}
+    command: redis-server /usr/local/etc/redis/redis.conf --requirepass ${REDIS_DEFAULT_PASS}
     ports:
       - "6379:6379"
     volumes:
-     - ~/.docker/redis1/data:/data
+      - ./config:/usr/local/etc/redis
+      - ~/.docker/redis1/data:/data
