--- a/dev/mongo-dev/docker-compose.yml
+++ b/dev/mongo-dev/docker-compose.yml
@@ -1,42 +1,15 @@
-version: '2'
+version: '3.8'
 
 services:
-  mongos:
-    image: 'bitnami/mongodb-sharded:latest'
+
+  mongo:
+    image: mongo@4.0.10
     environment:
-      - MONGODB_SHARDING_MODE=mongos
-      - MONGODB_CFG_PRIMARY_HOST=mongodb-cfg
-      - MONGODB_CFG_REPLICA_SET_NAME=cfgreplicaset
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
-      - MONGODB_ROOT_PASSWORD=password123
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_DEFAULT_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_DEFAULT_PASS}
+    volumes:
+        - ~/.docker/mongodb/database:/data/db
     ports:
-      - "27017:27017"
+        - 27017:27017
+    restart: unless-stopped
 
-  mongodb-shard0-primary:
-    image: 'bitnami/mongodb-sharded:latest'
-    environment:
-      - MONGODB_SHARDING_MODE=shardsvr
-      - MONGODB_MONGOS_HOST=mongos
-      - MONGODB_ROOT_PASSWORD=password123
-      - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
-      - MONGODB_REPLICA_SET_NAME=shard0
-    volumes:
-      - 'shard0_data:/bitnami'
-
-  mongodb-configsvr-primary:
-    image: 'bitnami/mongodb-sharded:latest'
-    environment:
-      - MONGODB_SHARDING_MODE=configsvr
-      - MONGODB_ROOT_PASSWORD=password123
-      - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
-      - MONGODB_REPLICA_SET_NAME=config-replicaset
-    volumes:
-      - 'cfg_data:/bitnami'
-
-volumes:
-  shard0_data:
-    driver: local
-  cfg_data:
-    driver: local
