Add restart police

--- a/dev/rabbit-dev/docker-compose.yml
+++ b/dev/rabbit-dev/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
     networks:
         - rabbitmq_net
-
+    restart: unless-stopped
 networks:
   rabbitmq_net:
     driver: bridge
