--- a/dev/redis-dev/docker-compose.yml
+++ b/dev/redis-dev/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "8001:8001"
     volumes:
      - ~/.docker/redisinsight:/db
+    restart: unless-stopped
   redis:
     image: "redis:alpine"
     command: redis-server /usr/local/etc/redis/redis.conf --requirepass ${REDIS_DEFAULT_PASS}
@@ -14,3 +15,4 @@ services:
     volumes:
       - ./config:/usr/local/etc/redis
       - ~/.docker/redis1/data:/data
+    restart: unless-stopped
