--- a/dev/config-server/docker-compose.yml
+++ b/dev/config-server/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - SPRING_CLOUD_CONFIG_SERVER_AWSS3_BUCKET=$AWSS3_BUCKET
       - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+      - JAVA_OPTS=-Dlogging.level.root=DEBUG
     ports:
       - "8888:8888"
     restart: always
