--- a/dev/jaeger-ot-es-dev/docker-compose.yml
+++ b/dev/jaeger-ot-es-dev/docker-compose.yml
@@ -2,14 +2,18 @@ version: '3.8'
 
 services:
   collector:
-    image: otel/opentelemetry-collector:latest
-    command: ["--config=/conf/opentelemetry-collector.config.yaml", "--log-level=DEBUG"]
+    image: otel/opentelemetry-collector-contrib:latest
+    command: ["--config=/etc/otelcol-contrib/config.yaml"]
     volumes:
-      - ./opentelemetry-collector.config.yaml:/conf/opentelemetry-collector.config.yaml
+      - ./otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
     ports:
-      - "9464:9464"
-      - "55680:55680"
-      - "55681:55681"
+      - 1888:1888 # pprof extension
+      - 8888:8888 # Prometheus metrics exposed by the Collector
+      - 8889:8889 # Prometheus exporter metrics
+      - 13133:13133 # health_check extension
+      - 4317:4317 # OTLP gRPC receiver
+      - 4318:4318 # OTLP http receiver
+      - 55679:55679 # zpages extension
     depends_on:
       - jaeger-collector
 
@@ -20,8 +24,8 @@ services:
       - "14250:14250" # accept model.proto
       - "14268:14268" # accept jaeger.thrift directly from clients
       # - "9411" # Zipkin compatible endpoint (optional)
-      - "4317:4317" # accept OpenTelemetry Protocol (OTLP) over gRPC
-      - "4318:4318" # accept OpenTelemetry Protocol (OTLP) over HTTP
+      # - "4317:4317" # accept OpenTelemetry Protocol (OTLP) over gRPC
+      # - "4318:4318" # accept OpenTelemetry Protocol (OTLP) over HTTP
     environment:
       - SPAN_STORAGE_TYPE=elasticsearch
       - LOG_LEVEL=debug
