--- a/dev/otel-grafana/configs/grafana/provisioning/datasources/datasource.yml
+++ b/dev/otel-grafana/configs/grafana/provisioning/datasources/datasource.yml
@@ -48,3 +48,19 @@ datasources:
   version: 1
   # <bool> allow users to edit datasources from the UI.
   editable: true
+
+- name: Tempo
+  type: tempo
+  access: proxy
+  orgId: 1
+  url: http://tempo:3200
+  basicAuth: false
+  isDefault: false
+  version: 1
+  editable: false
+  apiVersion: 1
+  uid: tempo
+  jsonData:
+    httpMethod: GET
+    serviceMap:
+      datasourceUid: prometheus
