--- a/dev/otel-grafana/configs/otel-collector-config.yml
+++ b/dev/otel-grafana/configs/otel-collector-config.yml
@@ -11,6 +11,10 @@ exporters:
     verbosity: detailed
   prometheus:
     endpoint: "0.0.0.0:8889"
+  otlp/tempo:
+    endpoint: "tempo:4317"
+    tls:
+      insecure: true
 processors:
     batch:
 service:
@@ -18,7 +22,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: [logging, otlp/tempo]
     metrics:
       receivers: [otlp]
       processors: [batch]
