--- a/dev/otel-grafana/configs/otel-collector-config.yml
+++ b/dev/otel-grafana/configs/otel-collector-config.yml
@@ -15,6 +15,10 @@ exporters:
     endpoint: "tempo:4317"
     tls:
       insecure: true
+  # https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/main/exporter/lokiexporter/README.md
+  otlphttp/loki:
+    # endpoint: "http://loki:3100/otlp/v1/logs"
+    endpoint: "http://loki:3100/loki/api/v1/push" #works
 processors:
     batch:
 service:
@@ -30,4 +34,4 @@ service:
     logs:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: [logging, otlphttp/loki]
