--- a/dev/otel-grafana/configs/grafana/provisioning/datasources/datasource.yml
+++ b/dev/otel-grafana/configs/grafana/provisioning/datasources/datasource.yml
@@ -11,71 +11,47 @@ deleteDatasources:
 datasources:
   # <string, required> name of the datasource. Required
 - name: Prometheus
-  # <string, required> datasource type. Required
   type: prometheus
-  # <string, required> access mode. direct or proxy. Required
-  access: proxy
-  # <int> org id. will default to orgId 1 if not specified
-  orgId: 1
-  # <string> url
+  uid: prometheus
   url: http://prometheus:9090
-  # <string> database password, if used
-  password:
-  # <string> database user, if used
-  user:
-  # <string> database name, if used
-  database:
-  # <bool> enable/disable basic auth
-  basicAuth: false
-  # <string> basic auth username, if used
-  basicAuthUser:
-  # <string> basic auth password, if used
-  basicAuthPassword:
-  # <bool> enable/disable with credentials headers
-  withCredentials:
-  # <bool> mark as default datasource. Max one per org
-  isDefault: true
-  # <map> fields that will be converted to json and stored in json_data
   jsonData:
-     graphiteVersion: "1.1"
-     tlsAuth: false
-     tlsAuthWithCACert: false
-  # <string> json object of data that will be encrypted.
-  secureJsonData:
-    tlsCACert: "..."
-    tlsClientCert: "..."
-    tlsClientKey: "..."
-  version: 1
-  # <bool> allow users to edit datasources from the UI.
-  editable: true
+    timeInterval: 60s
+    exemplarTraceIdDestinations:
+      - name: traceID
+        datasourceUid: tempo
+        urlDisplayLabel: 'Trace: $${__value.raw}'
 
 - name: Tempo
   type: tempo
-  access: proxy
-  orgId: 1
-  url: http://tempo:3200
-  basicAuth: false
-  isDefault: false
-  version: 1
-  editable: false
-  apiVersion: 1
   uid: tempo
+  url: http://localhost:3200
   jsonData:
-    httpMethod: GET
+    tracesToLogsV2:
+      customQuery: true
+      datasourceUid: 'loki'
+      query: '{$${__tags}} | trace_id = "$${__trace.traceId}"'
+      tags:
+        - key: 'service.name'
+          value: 'service_name'
+      
     serviceMap:
       datasourceUid: prometheus
+    search:
+      hide: false
+    nodeGraph:
+      enabled: true
+    lokiSearch:
+      datasourceUid: 'loki'
 
 - name: Loki
-  uid: loki
   type: loki
-  isDefault: false
-  version: 1
-  editable: false
-  access: proxy
+  uid: loki
   url: http://loki:3100
   jsonData:
     derivedFields:
-      - datasourceUid: tempo
-        matcherRegex: "TraceId=(\\w+)"
-        name: TraceId
-        url: "$${__value.raw}"
+      - datasourceUid: 'tempo'
+        matcherType: 'label'
+        matcherRegex: 'trace_id'
+        name: 'trace_id'
+        urlDisplayLabel: 'Trace: $${__value.raw}'
+        url: '$${__value.raw}'
