--- a/dev/otel-grafana/configs/loki-config.yml
+++ b/dev/otel-grafana/configs/loki-config.yml
@@ -1,5 +1,9 @@
 auth_enabled: false
 
+limits_config:
+  allow_structured_metadata: true
+  volume_enabled: true
+
 server:
   http_listen_port: 3100 # Listen on port 3100 for all incoming traffic.
   grpc_listen_port: 9096
@@ -26,7 +30,7 @@ query_range:
 
 schema_config:
   configs:
-    - from: 2023-01-01
+    - from: 2020-10-24
       store: tsdb
       object_store: filesystem
       schema: v13
